<resources>
    <string name="app_name">SecondDay</string>
    <string name="userName">User Name</string>
    <string name="Password">Password</string>
    <string name="Regist">Regist</string>
    <string name="Login">Login</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="art">Art</string>
    <string name="Technology">Technology</string>
    <string name="editing">Editing</string>
    <string name="design">Design</string>
    <string name="Gender">Gender</string>
    <string name="Intrests">Intrests</string>
    <string name="call">Call</string>
    <string name="lock">Lock</string>
    <string name="android">Android</string>
    <string name="RegistRecycler">Regist Recycler</string>
    <string name="ContentTransition">Content Transition</string>
    <string name="BackToMain">Back To Main</string>
</resources>
