<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_call"
            android:icon="@android:drawable/sym_action_call"
            android:title="@string/call" />
        <item
            android:id="@+id/nav_lock"
            android:icon="@android:drawable/ic_lock_lock"
            android:title="@string/lock" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_android"
            android:icon="@mipmap/ic_launcher_round"
            android:title="@string/android"
            app:headerLayout="@layout/nav_header" />
    </group>
</menu>